[package]
name = "wwchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
parity-db = "0.3"

# Arc/Mutex/threading are built-in (std), no crate needed.

# Optional: Uncomment for better thread error reporting.
# color-backtrace = "0.5"
# anyhow = "1.0"

# Future: Crypto/REST/WebSockets, etc.
rand = "0.8"
secp256k1 = "0.28"
# tiny-http = "0.12"      # For REST API

# Dev: Uncomment for hot reloading (not needed in production)
# cargo-watch = "8.4"

[features]
sync = []
