[package]
name = "wwchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
rocksdb = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-rustls = { version = "0.24", optional = true }
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0", optional = true }
regex = "1"

# Arc/Mutex/threading are built-in (std), no crate needed.

# Optional: Uncomment for better thread error reporting.
# color-backtrace = "0.5"
# anyhow = "1.0"

# Future: Crypto/REST/WebSockets, etc.
rand = "0.8"
secp256k1 = "0.28"
# tiny-http = "0.12"      # For REST API
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
http = "1"

# Dev: Uncomment for hot reloading (not needed in production)
# cargo-watch = "8.4"

[features]
sync = []
tls = ["tokio-rustls", "rustls", "rustls-pemfile"]
